kbnginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: qa
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: nginx:latest
    ports:
    - containerPort: 80
