vol-empdir.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
spec:
  containers:
  - name: my-container
    image: nginx
    volumeMounts:
    - name: my-volume
      mountPath: /app
  volumes:
  - name: my-volume
    emptyDir: {}
